# silent-nas

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  PR_DESCRIPTION.md  PR_NODE_SYNC_GRPC.md  README.md  ROADMAP.md  RUNNING.md  TODO.md  build.rs  config.example.toml  config.toml  deny.toml  grafana-dashboard-webdav.json  test-mc.txt  test-s3.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
admin-dashboard/: .env.development  .env.production  README.md  package.json  vite.config.ts
admin-dashboard/src/: App.vue  main.ts
admin-dashboard/src/api/: auth.ts  dashboard.ts  files.ts  s3Keys.ts  users.ts
admin-dashboard/src/components/: FileExplorer.vue
admin-dashboard/src/layouts/: MainLayout.vue
admin-dashboard/src/router/: index.ts
admin-dashboard/src/store/modules/: auth.ts
admin-dashboard/src/styles/: global.scss
admin-dashboard/src/types/: dashboard.ts  files.ts  index.ts  s3Keys.ts  user.ts
admin-dashboard/src/utils/: request.ts
admin-dashboard/src/views/Dashboard/: index.vue
docker/: .dockerignore  .env  Dockerfile  Makefile  QUICK_START.md  README.md  config.toml.template  docker-compose.yml  entrypoint.sh  start.sh
docs/: CRDT文件同步实现报告.md  HTTP条件请求.md  README.md  S3-WebDAV版本控制实现报告.md  S3兼容性完整性分析.md  S3功能更新报告.md  S3完整功能报告.md  S3测试结果.md  S3验证报告.md  admin-dashboard-plan.md  api-guide.md  configuration.md  deployment-multi-node.md  deployment.md  feat-authentication-enhancement-完成度报告.md  feat-incremental-sync分支功能完整性分析.md  grafana-dashboard-guide.md  installation.md  performance-test-results.md  phase3-cdc-optimization-analysis.md  requirements-sync.md  requirements.md  search_enhancement_summary.md  search_implementation.md  storage-v1-v2-comparison.md  storage-v2-integration.md  testing-scripts.md  troubleshooting-sync.md  webdav-guide.md  webdav-interop.md  webdav-large-file-upload-guide.md  webdav-large-file-upload.md  webdav-performance-testing.md  webdav-performance-tuning.md  webdav-report-extensions.md  webdav.md  事件监听器实现说明.md  代码重构-同步模块.md  分布式部署指南.md  开发总结-2025-10-16.md  (+16 more)
docs/developer/: README.md  metrics-enhancements.md  requirements-sync.md  requirements.md  search-technical.md  webdav-technical.md
proto/: file_service.proto
s3_test/: README.md
s3_test/docs/: S3功能验证报告.md  S3验证报告.md  VERIFICATION_SUMMARY.md  验证完成.md
s3_test/scripts/: extended_test.sh  manual_test.sh  s3_integration_test.sh
scripts/: README.md  cleanup-artifacts.sh  concurrent_test.sh  finder_webdav_test.sh  smoke-multi-node.sh  sync_3nodes_benchmark_docker.sh  webdav_benchmark.sh  webdav_interop_test.sh  webdav_lock.sh  webdav_proppatch.sh  webdav_stress_test.sh
scripts/.smoke/: smoke.txt
scripts/.smoke/node1/: config.toml
scripts/.smoke/node2/: config.toml
silent-nas-core/: Cargo.toml
silent-nas-core/src/: lib.rs  models.rs  storage.rs
silent-nas-core/src/storage/: mod.rs  s3.rs
silent-storage/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE_REPORT.md  PHASE4_STATUS_ASSESSMENT.md  PROJECT_COMPLETION_REPORT.md  README.md  bench_output.txt  compression_bench_output.txt
silent-storage-v1/: Cargo.toml
silent-storage-v1/src/: error.rs  lib.rs  storage.rs
silent-storage-v2/: Cargo.toml  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  README.md
silent-storage-v2/benches/: cdc_benchmark.rs  compression_benchmark.rs
silent-storage-v2/src/: adapter.rs  bench.rs  cache.rs  compatibility.rs  compression.rs  delta.rs  engine.rs  error.rs  index.rs  lib.rs  lifecycle.rs  metadata.rs  metrics.rs  mod.rs  reliability.rs  storage.rs  tiering.rs
silent-storage-v2/src/core/: chunker.rs  file_type.rs  mod.rs  version_chain.rs
silent-storage-v2/src/services/: index.rs  mod.rs  tiering.rs
silent-storage-v2/tests/: README.md  storage_integration_test.rs
silent-storage/benches/: cdc_benchmark.rs  compression_benchmark.rs
silent-storage/src/: bench.rs  bloom.rs  cache.rs  error.rs  lib.rs  metadata.rs  metrics.rs  mod.rs  optimization.rs  reliability.rs  storage.rs
silent-storage/src/core/: chunker.rs  circular_buffer.rs  compression.rs  delta.rs  file_type.rs  mod.rs  version_chain.rs
silent-storage/src/services/: dedup.rs  index.rs  mod.rs
silent-storage/tests/: README.md  storage_integration_test.rs
src/: audit.rs  auth.rs  cache.rs  config.rs  error.rs  event_listener.rs  http.rs  lib.rs  main.rs  metrics.rs  models.rs  node_sync.rs  node_sync_client.rs  node_sync_service.rs  notify.rs  rpc.rs  s3.rs  search.rs  storage.rs  sync.rs  transfer.rs  version.rs  webdav.rs
src/auth/: jwt.rs  mod.rs  models.rs  password.rs  rate_limit.rs  s3_keys_storage.rs  storage.rs  token_blacklist.rs
src/http/: admin_handlers.rs  audit_api.rs  auth_handlers.rs  auth_middleware.rs  files.rs  health.rs  incremental_sync.rs  metrics_api.rs  mod.rs  search.rs  state.rs  static_files.rs  storage_v2_metrics.rs  sync.rs  upload_sessions.rs  versions.rs
src/http/admin/: dashboard.rs  mod.rs
src/s3/: auth.rs  handlers.rs  mod.rs  models.rs  multipart.rs  service.rs  versioning.rs
src/s3/handlers/: bucket.rs  helpers.rs  mod.rs  object.rs  routes.rs
src/s3/handlers/object/: mod.rs  (+5 more)
src/s3_search/: executor.rs  mod.rs  parser.rs
src/search/: content_extractor.rs  incremental_indexer.rs  mod.rs
src/storage/: global.rs
src/storage_v2/: bench.rs  chunker.rs  compatibility.rs  compression.rs  dedup.rs  delta.rs  engine.rs  index.rs  lifecycle.rs  mod.rs  storage.rs  tiering.rs
src/sync/: README.md  crdt.rs  mod.rs
src/sync/incremental/: api.rs  core.rs  handler.rs  incremental_sync_api_README.md  mod.rs
src/sync/node/: client.rs  manager.rs  mod.rs  service.rs
src/unified_search/: aggregator.rs  mod.rs
src/webdav/: constants.rs  deltav.rs  files.rs  handler.rs  instant_upload.rs  integration_tests.rs  locks.rs  memory_monitor.rs  mod.rs  performance_tests.rs  props.rs  routes.rs  types.rs  upload_enhanced.rs  upload_session.rs
tests/: README.md  s3_webdav_versioning_integration_test.rs  storage_v2_integration_test.rs
(+3 files in other folders)
