[package]
name = "silent-nas"
version = "0.1.0"
edition = "2024"

[dependencies]
silent = { path = "./silent/silent" }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
scru128 = "3"
async-nats = "0.37"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

# QUIC support
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# gRPC support
tonic = "0.12"
prost = "0.13"

# WebDAV support
quick-xml = { version = "0.36", features = ["serialize"] }
mime_guess = "2"
urlencoding = "2"

[build-dependencies]
tonic-build = "0.12"
