[package]
name = "silent-nas"
version = "0.1.0"
edition = "2024"

[lib]
name = "silent_nas"
path = "src/lib.rs"

[[bin]]
name = "silent-nas"
path = "src/main.rs"

[dependencies]
silent = { path = "./silent/silent" }
silent-crdt = { path = "./silent-crdt" }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
scru128 = "3"
async-nats = "0.44"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# QUIC support
quinn = "0.11"
rustls = "0.23"
rcgen = "0.14"

# gRPC support
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

# WebDAV support
quick-xml = { version = "0.38", features = ["serialize"] }
mime_guess = "2"
urlencoding = "2"

# S3 support
hmac = "0.12"

# Search engine
tantivy = "0.22"

# Performance and monitoring
prometheus = "0.13"
lazy_static = "1.4"
moka = { version = "0.12", features = ["future"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
