[package]
name = "silent-nas-core"
version = "0.1.0"
edition = "2021"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
description = "Core types and models for Silent NAS"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scru128 = "3"
