[package]
name = "silent-storage-v1"
version = "0.1.0"
edition = "2024"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
description = "Simple file storage manager for Silent NAS (V1)"
license = "MIT"

[dependencies]
async-trait = "0.1"
silent-nas-core = { path = "../silent-nas-core" }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
