[package]
name = "silent-storage-v2"
version = "0.1.0"
edition = "2024"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
description = "Advanced storage system with deduplication, incremental storage, and tiering for Silent NAS (V2)"
license = "MIT"

[dependencies]
silent-nas-core = { path = "../silent-nas-core" }
silent-storage-v1 = { path = "../silent-storage-v1" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
scru128 = "3"

# CDC and compression
crc = "3"
moka = { version = "0.12", features = ["future"] }
lz4_flex = { version = "0.11", default-features = false }
zstd = { version = "0.13", default-features = false }
md5 = "0.8"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
