[package]
name = "silent-storage"
version = "0.1.0"
edition = "2024"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
description = "Advanced storage system with deduplication, incremental storage, and tiering for Silent NAS"
license = "MIT"

[dependencies]
silent-nas-core = { path = "../silent-nas-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
scru128 = "3"

# CDC and compression
crc = "3"
moka = { version = "0.12", features = ["future"] }
lz4_flex = { version = "0.11", default-features = false }
zstd = { version = "0.13", default-features = false }
md5 = "0.8"

# Embedded database
sled = "0.34"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cdc_benchmark"
harness = false

[[bench]]
name = "compression_benchmark"
harness = false
